adding roles and security update